syntax = "proto3";

package product;

option go_package = "./common/pb;pb";

message ProductRequest {
  int64 product_id = 1;
}

message ProductResponse {
  int64 product_id = 1;
  string name = 2;
  float price = 3;
}

// === 新增：扣减库存请求 ===
message DeductStockRequest {
  int64 product_id = 1;
  int32 count = 2; // 扣几个
}

message DeductStockResponse {
  bool success = 1;
  string message = 2;
}

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  // === 新增接口 ===
  rpc DeductStock(DeductStockRequest) returns (DeductStockResponse);
}